<?xml version="1.0"?>
<package>
  <name>conman_ros</name>
  <version>0.0.0</version>
  <description>The conman_ros package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/conman_ros</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_actionlib</build_depend>
  <build_depend>conman</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>conman</run_depend>

  <build_depend>conman_msgs</build_depend>
  <run_depend>conman_msgs</run_depend>
  <build_depend>rtt_conman_msgs</build_depend>
  <run_depend>rtt_conman_msgs</run_depend>

  <build_depend>controller_manager_msgs</build_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <build_depend>rtt_controller_manager_msgs</build_depend>
  <run_depend>rtt_controller_manager_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rtt_ros>
      <plugin_depend>conman</plugin_depend>
      <plugin_depend>rtt_roscomm</plugin_depend>
      <plugin_depend>rtt_actionlib</plugin_depend>
      <plugin_depend>rtt_controller_manager_msgs</plugin_depend>
      <plugin_depend>rtt_conman_msgs</plugin_depend>
    </rtt_ros>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
